# sinpapel-reports

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.es.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
docs/: index.md
docs/superpowers/plans/: 2026-06-29-sinpapel-reports.md
docs/superpowers/specs/: 2026-06-29-sinpapel-reports-design.md
docs/usage/: en.md  es.md
sinpapel_reports/: __init__.py  apps.py  data_sources.py  exceptions.py  registry.py
sinpapel_reports/drf/: __init__.py  serializers.py  urls.py  views.py
sinpapel_reports/schemas/: __init__.py  overlay.py
sinpapel_reports/services/: __init__.py  docx_renderer.py  overlay_renderer.py  report_engine.py
tests/: apps.py  conftest.py  models.py  reports.py  settings.py  test_docx_renderer.py  test_drf.py  test_no_creditos_dep.py  test_overlay_renderer.py  test_registry.py  test_report_engine.py  test_scaffold.py  test_schema_overlay.py  urls.py  utils.py
