[project]
name = "sinpapel-reports"
version = "0.2.0"
description = "Pluggable template-driven document generation (PDF overlay + DOCX) for the sinpapel ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Julio Adrián", email = "jadrian.s@gmail.com" }]
keywords = ["django", "pdf", "docx", "report", "document-generation", "overlay", "sinpapel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.0",
    "sinpapel @ git+ssh://git@github.com/aprendomx/sinpapel.git@v0.7.0",
    "PyPDF2>=3.0",
    "reportlab>=4.4",
    "docxtpl",
]

[project.optional-dependencies]
drf = ["djangorestframework>=3.14"]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.12",
    "pytest-cov>=5.0",
    "build>=1.2",
    "twine>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Layout: flat — pyproject.toml + package files at repo root.
[tool.setuptools]
packages = [
    "sinpapel_reports",
    "sinpapel_reports.schemas",
    "sinpapel_reports.services",
    "sinpapel_reports.drf",
]

[tool.setuptools.package-data]
sinpapel_reports = ["py.typed"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
python_files = "test_*.py"
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning:PyPDF2",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["sinpapel_reports"]
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 1
skip_covered = true
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100", # Missing docstring in public module (we use module comments)
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "tests",
    "docs",
    ".venv",
]

[tool.pyright]
include = ["sinpapel_reports"]
exclude = ["tests", "docs", "site", ".venv", "__pycache__", ".pytest_cache"]
pythonVersion = "3.10"
reportMissingImports = "warning"
reportAttributeAccessIssue = "warning"
